src/test/deca/context/valid/printx.deca
// Description:
//    printx d'un nombre.
//
// Resultats:
//    //TODO: Chercher le res
//
// Historique:
//    cree le 06/01/2023

{
        printx(11.0);
}
